website/versioned_docs/version-0.0.27/supported-formats.md
---
sidebar_position: 4
---

# Supported Formats

Shisho supports a variety of book formats across three media types.

## Ebooks

- **EPUB** — Full [metadata extraction](./metadata#epub) including title, authors, series, description, cover art, language, and more
- **PDF** — Full [metadata extraction](./metadata#pdf) including title, authors, description, cover art, page count, language, and chapter extraction from PDF bookmarks. Includes an in-app viewer with page-by-page reading

## Audiobooks

- **M4B** — Full [metadata extraction](./metadata#m4b) including title, authors, narrators, series, chapters, cover art, language, and abridged status

## Comics

- **CBZ** — Full [metadata extraction](./metadata#cbz) from ComicInfo.xml including title, authors, series, cover art, and language

## Downloads

Shisho can generate download files in additional formats:

- **KePub** — Kobo-optimized EPUB format for [Kobo e-readers](./kobo-sync)
